vlib/v/checker/tests/deprecate_any.vv
fn foo(a any) {}

fn main() {
	_ := []any{}
	_ := map[int]any{}
	_ := map[any]int{}
}
